# Gain-Booster

./: .gitattributes  .gitignore  CMakeLists.txt  contributing.md  create_pkg.sh  declarations.d.ts  distribution.xml  embed_binary.bat  embed_binary.sh  index.html  index.scss  index.tsx  package-lock.json  package.json  readme.md  rsbuild.config.ts  tsconfig.json
.github/workflows/: build.yaml
assets/: icon.rc  icon_big.icns
components/: JuceComboBox.tsx  JuceSlider.tsx  Knob.tsx  LFOBar.tsx  MappingOptions.tsx  MiniKnob.tsx  PresetBar.tsx  withJuceComboBox.tsx  withJuceSlider.tsx
components/styles/: knob.scss  lfobar.scss  mappingoptions.scss  miniknob.scss  presetbar.scss
editor/: BinaryData.cpp  BinaryData.h  Editor.cpp  Editor.h  EventEmitter.hpp  NativeMacMenu.mm  NativeMenuBridge.h  NativeWinMenu.cpp  PresetManager.cpp  PresetManager.h  Settings.hpp
presets/: 1-16 Autopan.json  1-16 Gate.json  1-4 Autopan.json  1-4 Gate.json  1-8 Autopan 50%.json  1-8 Autopan.json  1-8 Gate 50%.json  1-8 Gate.json  1-8 Saw Autopan.json  1-8 Sine Gate.json  1-8 Tri Gate.json  1:16 Gate.json  1:8 Autopan.json  1:8 Saw Autopan.json  50% Volume.json  6dB Boost.json  Hard Left.json  Hard Right.json
processor/: BPM.h  BPM.hpp  CheckAudioSafety.h  DSP.h  DSP.hpp  LFO.h  LFO.hpp  PanningLaw.hpp  ParameterIDs.h  ParameterIDs.hpp  Parameters.cpp  Parameters.h  Processor.cpp  Processor.h  parameters.json
structures/: Functions.cpp  Functions.h  Functions.hpp  Functions.ts
